<resources>
    <string name="app_name">Plants</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="status">Status</string>
    <string name="plants">Plants</string>
    <string name="family">Family</string>
    <string name="index">Index</string>
    <string name="author">Author</string>
    <string name="more_details">More Details</string>
    <string name="plant_details">Plant details</string>


    <string-array name="zones_list">
        <item>All</item>
        <item>Palestine</item>
        <item>Sudan</item>
        <item>Myanmar</item>
        <item>Transcaucasus</item>
        <item>Uzbekistan</item>
    </string-array>

    <string-array name="zones_list_filter">
        <item>All</item>
        <item>pal</item>
        <item>sud</item>
        <item>mya</item>
        <item>tcs</item>
        <item>uzb</item>
    </string-array>

</resources>